# geeqie

./: .cvsignore  .gitignore  .mailmap  .travis.yml  AUTHORS  BUGS  CODING  ChangeLog  ChangeLog.gqview  ChangeLog.html  HACKING  MY_MESSAGE  Makefile.am  NEWS  README  README.GQViewE  README.html  README.md  TODO  ZoneDetect.md  acconfig.h  autogen.sh  configure.ac  configure.in  doxygen.conf  geeqie-install-debian.sh  geeqie.1  geeqie.desktop  geeqie.desktop.in  geeqie.spec.in  gen_changelog.sh  gen_readme.sh  gqview.1  gqview.desktop  gqview.spec.in  install-dependencies-debian.sh
.github/: ISSUE_TEMPLATE.md
.tx/: config
debian/: changelog  control  copyright  docs  geeqie.doc-base  menu  rules  watch
doc/: 10_1_general.html  10_2_image.html  10_3_window.html  10_4_filtering.html  10_5_editor_commands.html  10_6_advanced.html  10_7_hidden.html  10_options.html  11_1_command_line.html  11_2_keyboard_shortcuts.html  11_3_thumbnails.html  11_4_management.html  11_reference.html  12_credits.html  1_introduction.html  2_1_navigation.html  2_2_menus.html  2_3_layout.html  2_4_file_pane.html  2_5_folder_pane.html  2_6_image_pane.html  2_7_status_bar.html  2_main_window.html  3_1_image_window.html  3_2_image_properties.html  3_other_windows.html  4_1_copy_move.html  4_2_rename.html  4_3_delete.html  4_4_external_editing.html  4_image_management.html  5_1_search.html  5_2_finding_duplicates.html  5_image_search.html  6_collections.html  7_1_exif.html  7_2_sort_manager.html  7_3_keywords.html  7_sidebars.html  8_1_slideshow.html  (+58 more)
doc/docbook/: GuideCollections.xml  GuideColorManagement.xml  GuideCredits.xml  GuideEditorsConfig.xml  GuideFaq.xml  GuideGnuFdl.xml  GuideImageManagement.xml  GuideImageManagementCopyMove.xml  GuideImageManagementDelete.xml  GuideImageManagementExternalEditing.xml  GuideImageManagementPlugins.xml  GuideImageManagementRename.xml  GuideImageMarks.xml  GuideImagePresentation.xml  GuideImagePresentationFullscreen.xml  GuideImagePresentationSlideshow.xml  GuideImageSearch.xml  GuideImageSearchFindingDuplicates.xml  GuideImageSearchSearch.xml  GuideIndex.xml  GuideIntroduction.xml  GuideLicence.xml  GuideMainWindow.xml  GuideMainWindowFilePane.xml  GuideMainWindowFolderPane.xml  GuideMainWindowImagePane.xml  GuideMainWindowLayout.xml  GuideMainWindowMenus.xml  GuideMainWindowNavigation.xml  GuideMainWindowStatusBar.xml  GuideOptions.xml  GuideOptionsAdditional.xml  GuideOptionsBehavior.xml  GuideOptionsColor.xml  GuideOptionsFiltering.xml  GuideOptionsGeneral.xml  GuideOptionsHidden.xml  GuideOptionsImage.xml  GuideOptionsKeyboard.xml  GuideOptionsKeywords.xml  (+35 more)
keymap/: hardcoded_keys  keymap.awk  keymap.pl
plugins/: Makefile.am  template.desktop  template.desktop.in
plugins/ZoneDetect/: Makefile.am
plugins/camera-import/: Makefile.am  camera-import.desktop.in  geeqie-camera-import  geeqie-camera-import-hook-script
plugins/export-jpeg/: Makefile.am  export-jpeg.desktop.in  geeqie-export-jpeg
plugins/geocode-parameters/: Makefile.am  geocode-parameters.awk
plugins/image-crop/: Makefile.am  geeqie-image-crop  image-crop.desktop  image-crop.desktop.in
plugins/import/: Makefile.am  geeqie-import  geeqie-import-geeqie.desktop.in  geeqie-import-gqview.desktop.in
plugins/lens/: Makefile.am  lensID
plugins/random-image/: Makefile.am  geeqie-random-image  random-image.desktop.in
plugins/rotate/: Makefile.am  geeqie-rotate  rotate.desktop  rotate.desktop.in  rotate180.desktop  rotate270.desktop  rotate90.desktop
plugins/symlink/: Makefile.am  symlink.desktop
plugins/tethered-photography/: Makefile.am  geeqie-tethered-photography  geeqie-tethered-photography-hook-script  tethered-photography.desktop.in
plugins/ufraw/: Makefile.am  geeqie-ufraw  geeqie-ufraw-id.desktop.in  geeqie-ufraw-recursive.desktop.in  geeqie-ufraw.desktop.in
po/: .cvsignore  LINGUAS  Makefile.in.in.patch  POTFILES.in  README  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gen_translations_stats.sh  hu.po  id.po  it.po  ja.po  ko.po  nb.po  nl.po  no.po  pl.po  pt_BR.po  regen_potfiles.sh  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  th.po  (+8 more)
scripts/: decode_sim
scripts/zonedetect/: create_timezone_database
src/: .cvsignore  ClayRGB1998_icc.h  Makefile.am  advanced_exif.c  advanced_exif.h  bar.c  bar.h  bar_comment.c  bar_comment.h  bar_exif.c  bar_exif.h  bar_gps.c  bar_gps.h  bar_histogram.c  bar_histogram.h  bar_info.c  bar_info.h  bar_keywords.c  bar_keywords.h  bar_sort.c  bar_sort.h  cache-loader.c  cache-loader.h  cache.c  cache.h  cache_maint.c  cache_maint.h  cellrenderericon.c  cellrenderericon.h  collect-dlg.c  collect-dlg.h  collect-io.c  collect-io.h  collect-table.c  collect-table.h  collect.c  collect.h  color-man.c  color-man.h  compat.c  (+213 more)
src/icons/: Makefile.am  collect.xpm  config.xpm  dialog.xpm  icon.xpm  icon_config.xpm  icon_float.xpm  icon_home.xpm  icon_reload.xpm  icon_thumb.xpm  icon_zoom_fit.xpm  icon_zoom_in.xpm  icon_zoom_norm.xpm  icon_zoom_out.xpm  img_unknown.xpm  tools.xpm  view.xpm
src/icons/svg/: Makefile.am
src/pan-view/: Makefile.am  pan-calendar.c  pan-calendar.h  pan-folder.c  pan-folder.h  pan-grid.c  pan-grid.h  pan-item.c  pan-item.h  pan-timeline.c  pan-timeline.h  pan-types.h  pan-util.c  pan-util.h  pan-view-filter.c  pan-view-filter.h  pan-view-search.c  pan-view-search.h  pan-view.c  pan-view.h
src/view_file/: Makefile.am  view_file.c  view_file_common.c  view_file_icon.c  view_file_icon.h  view_file_list.c  view_file_list.h
web/: default.css  features.html  geeqie-install-debian.sh  index.html  installing.html  tidy.conf  upload.sh
web/help/: Cancelbutton.html  Commandline.html  ExifRotation.html  Features.html  GuideCollections.html  GuideColorManagement.html  GuideCredits.html  GuideEditorsConfig.html  GuideFaq.html  GuideGnuFdl.html  GuideImageManagement.html  GuideImageManagementCopyMove.html  GuideImageManagementDelete.html  GuideImageManagementExternalEditing.html  GuideImageManagementPlugins.html  GuideImageManagementRename.html  (+71 more)
(+24 files in other folders)
