## Process this file with automake to produce Makefile.in.

helpdir = @htmldir@
help_DATA = \
	collections.html	\
	credits.html	\
	faq.html	\
	gnu_fdl.txt	\
	image_management_copy_move.html	\
	image_management_delete.html	\
	image_management_external_editing.html	\
	image_management.html	\
	image_management_rename.html	\
	image_presentation_fullscreen.html	\
	image_presentation.html	\
	image_presentation_slideshow.html	\
	image_search_finding_duplicates.html	\
	image_search.html	\
	image_search_search.html	\
	index.html	\
	introduction.html	\
	main_window_file_pane.html	\
	main_window_folder_pane.html	\
	main_window.html	\
	main_window_image_pane.html	\
	main_window_layout.html	\
	main_window_menus.html	\
	main_window_navigation.html	\
	main_window_status_bar.html	\
	Makefile	\
	Makefile.am	\
	Makefile.in	\
	options_advanced.html	\
	options_editor_commands.html	\
	options_filtering.html	\
	options_general.html	\
	options_hidden.html	\
	options.html	\
	options_image.html	\
	options_window.html	\
	other_windows.html	\
	other_windows_image_properties.html	\
	other_windows_image_window.html	\
	printing.html	\
	reference_command_line.html	\
	reference.html	\
	reference_keyboard_shortcuts.html	\
	reference_management.html	\
	reference_thumbnails.html	\
	sidebars_exif.html	\
	sidebars.html	\
	sidebars_keywords.html	\
	sidebars_sort_manager.html	\
	template.html

EXTRA_DIST = $(help_DATA) template.html
